<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/filter"
        android:title="@string/filter"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/help"
        android:title="@string/help"
        app:showAsAction="never" />
    <item
        android:id="@+id/clear"
        android:title="@string/clear"
        app:showAsAction="never" />
    <item
        android:id="@+id/auto_scroll"
        android:title="@string/auto_scroll"
        android:checkable="true"
        android:checked="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/float_window"
        android:title="@string/float_window"
        app:showAsAction="never" />
    <item
        android:id="@+id/exit"
        android:title="@string/exit"
        app:showAsAction="never" />

</menu>